2009-08-25  Sven Herzberg  <sven@lanedo.com>

	Fixes: NB#134552 (Progress Banner at start of maps and tutorial applet
	is broken.)

	* engine/sapwood-pixmap.c (sapwood_pixmap_render_rects_internal),
	(sapwood_crop_pixmap), (sapwood_pixmap_render_rects): properly clip
	to the cropped region; also respect the alpha mask in the cropping

2009-08-25  Sven Herzberg  <sven@lanedo.com>

	About: NB#134552 (Progress Banner at start of maps and tutorial applet
	is broken.)

	* demos/Makefile.am: build the new demo
	* demos/cropping.c,
	* demos/cropping.gtkrc: added a demo for the cropping
	* demos/images/cropping.png,
	* demos/images/cropping.xcf: added an opaque gradient image to test
	the cropping
	* demos/images/cropping-label.png,
	* demos/images/cropping-label.xcf: added a mixed image (opaque and
	transparent) to test the cropping with masks

2009-08-25  Sven Herzberg  <sven@lanedo.com>

	* server/sapwood-server.c (extract_pixmap_single): don't save the
	images to disk, evil debugging code...

2009-08-21  Sven Herzberg  <sven@lanedo.com>

	About: NB#89864 - [AF Checked] RGBA support

	* engine/sapwood-pixmap.c (sapwood_pixmap_render_rects_internal):
	restore the original behavior to respect the alpha bitmask

2009-08-20  Christian Dywan  <christian@lanedo.com>

	NB#118393 - Crop images if they are supposed to be rendered too small

	* engine/sapwood-pixmap.c (sapwood_crop_pixmap),
	(sapwood_pixmap_render_rects): Implement sapwood_crop_pixmap and crop
	the image if it is too big.

2009-08-07  Alejandro G. Castro  <alex@igalia.com>

	Added a new debug enviroment option to enable the synchronous X
	error handling.

	* engine/sapwood-main.c,
	(theme_init): Captured the new "xtraps" option in a new boolean
	variable.
	* engine/sapwood-pixmap.h:
	* engine/sapwood-pixmap.c,
	(sapwood_pixmap_get_for_file):
	* engine/theme-pixbuf.c,
	(theme_pixbuf_render): Added conditions to avoid gdk_flush if the
	xtraps debug option is not actived.
